--- a/TM.RestHour/Views/CompanyDetails/Index.cshtml
+++ b/TM.RestHour/Views/CompanyDetails/Index.cshtml
@@ -67,6 +67,117 @@
                             <div align="center">
                                 <div class="modal-body">
                                     <form>
+                                        @*////////////// Owner /////////////*@
+                                        <div>
+                                            <h1 class="">Owner</h1>
+                                            <div class="row">
+
+                                                <div class="col-sm-3" style="width: 105%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner Name:</label>
+                                                        <input type="text" class="form-control" id="OwnerName" placeholder="Owner Name" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner Address:</label>
+                                                        <input type="text" class="form-control" id="OwnerAddress" placeholder="Owner Address" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner Website:</label>
+                                                        <input type="text" class="form-control" id="OwnerWebsite" placeholder="Owner Website" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner AdminContact:</label>
+                                                        <input type="text" class="form-control" id="OwnerAdminContact" placeholder="Owner AdminContact" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner AdminContactEmail:</label>
+                                                        <input type="text" class="form-control" id="OwnerAdminContactEmail" placeholder="Owner AdminContactEmail" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner ContactNumber:</label>
+                                                        <input type="text" class="form-control" id="OwnerContactNumber" placeholder="Owner ContactNumber" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                <div class="col-sm-3" style="width: 63%;">
+                                                    <div class="form-horizontal">
+                                                        <label class="col-xs-5 control-label">Owner Domain:</label>
+                                                        <input type="text" class="form-control" id="OwnerDomain" placeholder="Owner Domain" disabled />
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+                                                <div class="col-sm-3" style="width: 63%;"></div>
+
+                                                @*<div class="col-sm-3" style="width: 63%;">
+                <div class="form-horizontal">
+                    <label class="col-xs-5 control-label">SecureKey:</label>
+                    <input type="text" class="form-control" id="SecureKey" placeholder="SecureKey" />
+                </div>
+            </div>*@
+
+
+                                                <div class="form-group">
+                                                    <input type="hidden" id="ID" class="form-control" />
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                        @*////////////////////////////////*@
+
 
                                         <div>
                                             <div class="row">
@@ -161,11 +272,11 @@
                                                 <div class="col-sm-3" style="width: 63%;"></div>
 
                                                 @*<div class="col-sm-3" style="width: 63%;">
-                                                        <div class="form-horizontal">
-                                                            <label class="col-xs-5 control-label">SecureKey:</label>
-                                                            <input type="text" class="form-control" id="SecureKey" placeholder="SecureKey" />
-                                                        </div>
-                                                    </div>*@
+                    <div class="form-horizontal">
+                        <label class="col-xs-5 control-label">SecureKey:</label>
+                        <input type="text" class="form-control" id="SecureKey" placeholder="SecureKey" />
+                    </div>
+                </div>*@
 
 
                                                 <div class="form-group">
@@ -176,9 +287,10 @@
 
                                         </div>
 
+
                                         <div class="modal-footer" style="width: 145%;">
                                             @*<button type="button" class="button1" id="btnNext" onclick="return SaveInitialShipValues();" style="width:86px;">Next</button>
-                                                <button type="button" class="button1" id="btnAdd" onclick="return GetCompanyDetailsByID();" style="width:86px;">Get Details</button>*@
+            <button type="button" class="button1" id="btnAdd" onclick="return GetCompanyDetailsByID();" style="width:86px;">Get Details</button>*@
                                         </div>
 
                                     </form>
