--- a/TM.RestHour/Views/PsychologicalEvaluation/LocusOfControl.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/LocusOfControl.cshtml
@@ -3,6 +3,25 @@
     ViewBag.Title = "LocusOfControl";
 }
 
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="../css/bootstrap.min.css" />
+
+<!-- style CSS -->
+<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
+
+<link href="dist/dual-listbox.css" rel="stylesheet">
+
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+<script src="~/Scripts/notify.min.js"></script>
+
+<script src="~/Scripts/toastr.min.js"></script>
+<link href="~/Content/toastr.min.css" rel="stylesheet" />
+
+<script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
+
+
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
 
 @Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
@@ -48,7 +67,7 @@
                                 </p>
                             </td>
                         </tr>
-                        <tr style="height:39pt;" id="q1">
+                        <tr style="height:39pt; color:red;" id="q1">
                             <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
                                 <p style="margin-left:6.300000000000001pt;text-indent:0.35000000000000003pt;margin-right:5.6000000000000005pt;line-height:95.83%;font-size:11.5pt;margin-top:0pt;margin-bottom:0pt;">
                                     <span style="font-family:Arial;font-size:11.5pt;">1. Is there some bad habit, such as smoking, that you would &nbsp; &nbsp; &nbsp; &nbsp;like to break but can’t?</span>
@@ -289,22 +308,22 @@
                             </td>
                         </tr>
                         @*<tr style="height:30.1pt;">
-                                <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
-                                    <p style="margin-left:6.25pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
-                                        <span style="font-family:Arial;font-size:15.5pt;">SCORE </span>
-                                    </p>
-                                </td>
-                                <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:75.4pt;vertical-align:top;">
-                                    <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
-                                        <span>&nbsp;</span>
-                                    </p>
-                                </td>
-                                <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:67.45pt;vertical-align:top;">
-                                    <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
-                                        <span>&nbsp;</span>
-                                    </p>
-                                </td>
-                            </tr>*@
+            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
+                <p style="margin-left:6.25pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
+                    <span style="font-family:Arial;font-size:15.5pt;">SCORE </span>
+                </p>
+            </td>
+            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:75.4pt;vertical-align:top;">
+                <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
+                    <span>&nbsp;</span>
+                </p>
+            </td>
+            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:67.45pt;vertical-align:top;">
+                <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
+                    <span>&nbsp;</span>
+                </p>
+            </td>
+        </tr>*@
                     </table>
                     @*<p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:11pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
                             <span>&nbsp;</span>
