--- a/TM.RestHour/Views/WellBeing/WellBeingMentalHealth.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingMentalHealth.cshtml
@@ -5,4 +5,60 @@
 }
 
 <h2>WellBeingMentalHealth</h2>
-
+<div class="well-table">
+    <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col" style="width:250px;">CREW NAME</th>
+                <th scope="col">Joining MedicalL</th>
+                <th scope="col">Monthy Medica Data</th>
+                <th scope="col">Prescription Medicine</th>
+                <th scope="col">Medical Advice</th>
+                <th scope="col">Medicine ...</th>
+                <th scope="col">Other</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td rowspan="2">Crew Name1</td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td>17.6.2022</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td>19.6.2022</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td rowspan="2">Crew Name1</td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td>17.6.2022</td>
+            </tr>
+            <tr>
+                <th scope="row">4</th>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td>22.6.2022</td>
+            </tr>
+          
+        </tbody>
+    </table>
+</div>
