--- a/TM.RestHour/Views/HeathTips/Maintainingahealthyweightonboard.cshtml
+++ b/TM.RestHour/Views/HeathTips/Maintainingahealthyweightonboard.cshtml
@@ -45,7 +45,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Overweight prevention,</a>
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Overweight prevention,</a>
                             </h4>
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse in">
