--- a/TM.RestHour/Views/HeathTips/Maintainingfitnessonboard.cshtml
+++ b/TM.RestHour/Views/HeathTips/Maintainingfitnessonboard.cshtml
@@ -44,7 +44,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                                     Introduction
                                 </a>
                             </h4>
