--- a/TM.RestHour/Views/HeathTips/Protectingyourskinonboard.cshtml
+++ b/TM.RestHour/Views/HeathTips/Protectingyourskinonboard.cshtml
@@ -40,7 +40,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Crew Health: Protecting your skin on board</a>
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Crew Health: Protecting your skin on board</a>
                             </h4>
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse in">
