--- a/TM.RestHour/Views/WellBeing/WellBeingHealth.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingHealth.cshtml
@@ -5,4 +5,63 @@
 }
 
 <h2>WellBeingHealth</h2>
+<div class="well-table">
+    <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col" style="width:250px;">CREW NAME</th>
+                <th scope="col">Joining MedicalL</th>
+                <th scope="col">Monthy Medica Data</th>
+                <th scope="col">Prescription Medicine</th>
+                <th scope="col">Medical Advice</th>
+                <th scope="col">Medicine ...</th>
+                <th scope="col">Other</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Crew Name1</td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+                <td><i class="fa fa-eye" aria-hidden="true"></i></td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Crew Name1</td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Crew Name1</td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Crew Name1</td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
 
